--- a/m.html
+++ b/m.html
@@ -1,42 +1,62 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bem-vindo</title>
 
-     <!-- Bootstrap 5 -->
+    <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-
-    <!-- Estilo extra para laterais azuis -->
     <style>
         body {
             background: linear-gradient(to right, #0d6efd 20%, white 20%, white 80%, #0d6efd 80%);
             min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
+
         .title {
             font-size: 3rem;
             font-weight: 700;
             color: #212529;
             font-family: "Segoe UI", Arial, sans-serif;
         }
-        label {
-            font-weight: 600;
-            font-size: 1.1rem;
+
+        /* botão com mesma fonte do h1 */
+        .btn-custom {
+            font-size: 3rem;
+            font-weight: 700;
+            font-family: "Segoe UI", Arial, sans-serif;
+            padding: 0.5rem 1.5rem;
+        }
+
+        /* fixa o botão ao fundo */
+        .footer-btn {
+            margin-top: auto;
+            padding-bottom: 40px; /* espaço do fundo */
         }
     </style>
 </head>
 <body>
-    <div style="text-align: center; margin-top: 50px; font-family: Arial, sans-serif;">
-        <h1   class="title mb-4 text-center"  id="welcomeMessage">Bem vindo(a)</h1>
-    <img src="sensecare.jpg" class="mb-4" width="500" height="500">
-    <button onclick="logout()" class="btn btn-primary">Sair</button>
+
+    <div class="container text-center mt-5">
+
+        <h1 class="title mb-4" id="welcomeMessage">Bem vindo(a)</h1>
+
+        <img src="sensecare.jpg" class="img-fluid mb-4" style="max-width: 300px;">
 
     </div>
+
+    <!-- botão no fundo da página -->
+    <div class="footer-btn text-center">
+        <button onclick="logout()" class="btn btn-primary btn-custom">
+            Sair
+        </button>
+    </div>
+
     <script>
         const saved = JSON.parse(localStorage.getItem('currentUser'));
-         console.log('Welcome page loaded user data:', saved);
         if (saved && saved.nome) {
             document.getElementById('welcomeMessage').textContent = 'Bem vindo(a) ' + saved.nome;
         }
@@ -47,8 +67,5 @@
         }
     </script>
 
-    <script src="m.js"></script>
-    
-    <script src="script.js"></script>
 </body>
 </html>
