--- a/m.html
+++ b/m.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -42,14 +42,28 @@
 
     <div class="container text-center mt-5">
 
+        <div class="text-center mb-4">
+            <button onclick="showInicio()" class="btn btn-primary btn-custom">Início</button>
+            <button class="btn btn-primary btn-custom">Pacientes</button>
+            <button class="btn btn-primary btn-custom">Histórico</button>
+            <button onclick="showPulseira()" class="btn btn-primary btn-custom">Pulseira</button>
+        </div>
+
         <h1 class="title mb-4" id="welcomeMessage">Bem vindo(a)</h1>
 
-        <img src="sensecare.jpg" class="img-fluid mb-4" style="max-width: 300px;">
+        <!-- NOVO: área de conteúdo limitada a 900px de largura -->
+        <div style="max-width: 900px; margin: 0 auto;">
+
+            <div id="contentArea">
+                <img src="sensecare.jpg" class="img-fluid mb-4" style="max-width: 300px;">
+            </div>
+
+        </div>
 
     </div>
 
     <!-- botão no fundo da página -->
-    <div class="footer-btn text-center">
+    <div id="footerBtn" class="footer-btn text-center">
         <button onclick="logout()" class="btn btn-primary btn-custom">
             Sair
         </button>
@@ -65,7 +79,59 @@
             localStorage.removeItem('passwordVisible');
             window.location.href = 'index.html';
         }
+
+        function showInicio() {
+            document.getElementById('welcomeMessage').style.display = 'block';
+            document.getElementById('contentArea').innerHTML = '<img src="sensecare.jpg" class="img-fluid mb-4" style="max-width: 300px;">';
+            document.getElementById('footerBtn').style.display = 'block';
+        }
+
+        function showPulseira() {
+            document.getElementById('welcomeMessage').style.display = 'none';
+            document.getElementById('contentArea').innerHTML = '<button onclick="showAlertas()" class="btn btn-primary btn-custom">Conectar</button>';
+            document.getElementById('footerBtn').style.display = 'none';
+        }
+
+        function showAlertas() {
+            document.getElementById('contentArea').innerHTML = `
+                <div class="d-flex flex-column align-items-center justify-content-between" style="min-height: 300px;">
+                    <div>
+                        <button class="btn btn-danger btn-custom">Alertas</button>
+                        <p class="mt-3 small text-center">
+                            Descompensação Extrema: Pressão arterial ou temperatura em níveis perigosamente altos ou baixos (Ex: hipotensão severa, febre alta > 39.5°C). Estes picos podem indicar complicações como Choque Séptico, Acidente Vascular Cerebral (AVC) ou Infarto Agudo do Miocárdio.<br>
+                            Parâmetros de Risco de Vida: Detecção de arritmia cardíaca grave, dessaturação de oxigênio (hipóxia) ou ausência de pulso.<br>
+                            Sintomas Graves: Perda de consciência, convulsões, hemorragia visível ou dificuldade respiratória súbita e intensa.<br>
+                            Ação do Médico: Prioridade máxima. Intervenção de emergência e, se necessário, acionamento imediato da equipe de ressuscitação.
+                        </p>
+                    </div>
+
+                    <div>
+                        <button class="btn btn-warning btn-custom">Alertas</button>
+                        <p class="mt-3 small text-center">
+                            Sinais Vitais Limítrofes: Pressão arterial ou temperatura subindo ou caindo, mas ainda dentro de uma margem que exige monitoramento a cada 15-30 minutos 
+                            (Ex: temperatura atingindo 37.8°C ou Pressão Sistólica próxima de 145 mmHg).<br>
+                            Cuidados Atrasados: Atraso significativo (> 30 minutos) na administração de um medicamento vital ou na execução de um cuidado importante, como a troca de decúbito, aumentando o risco de complicações (como úlceras por pressão).<br>
+                            Sintomas Leves/Moderados: Paciente relata dor crescente (moderada), náuseas ou confusão mental leve.<br>
+                            Ação do Médico: Prioridade média. Requer atenção imediata para avaliação e estabilização, antes que evolua para o alerta Vermelho.
+                        </p>
+                    </div>
+
+                    <div>
+                        <div class="d-flex align-items-center justify-content-center">
+                            <button class="btn btn-success btn-custom me-3">Alertas</button>
+                        </div>
+                        <p class="mt-3 small text-center">
+                            Conforto Básico: O paciente acionou a chamada para solicitar água, ajuste no travesseiro, troca de posição (sem indicação clínica obrigatória) ou assistência para mudar o canal da TV.<br>
+                            Rotina: Lembrete de verificação de rotina ou medicamento de baixa criticidade agendado para o futuro próximo.<br>
+                            Parâmetros Estáveis: Sinais vitais (Frequência Cardíaca, Pressão, Temperatura) totalmente dentro das margens seguras estabelecidas pelo médico.<br>
+                            Ação do Médico: Prioridade baixa. Atendimento pode ser encaixado na rotina sem interromper cuidados mais urgentes.
+                        </p>
+                    </div>
+                </div>
+            `;
+        }
     </script>
 
 </body>
 </html>
+
