--- a/m.html
+++ b/m.html
@@ -126,6 +126,7 @@
                             Parâmetros Estáveis: Sinais vitais (Frequência Cardíaca, Pressão, Temperatura) totalmente dentro das margens seguras estabelecidas pelo médico.<br>
                             Ação do Médico: Prioridade baixa. Atendimento pode ser encaixado na rotina sem interromper cuidados mais urgentes.
                         </p>
+                        <button onclick="showPulseira()" class="btn btn-secondary btn-custom mt-3">Desconectar</button>
                     </div>
                 </div>
             `;
