--- a/public/index.html
+++ b/public/index.html
@@ -109,5 +109,6 @@
     </div>
 <script src="script.js"></script>
 <script src="m.js"></script>
+<link rel="stylesheet" href="style.css">
 </body>
 </html>
